register and deregister third party
